# aplus-newlib

./: .gitignore  .travis.yml  README.md  config.sub
ci/: build.sh
newlib/: configure.host
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/aplus/: Makefile.am  Makefile.in  _exit.c  _isatty.c  _lseek64.c  close.c  configure  crt0.c  errno.c  fstat.c  getpid.c  gettimeofday.c  kill.c  lseek.c  read.c  sbrk.c  syscall.c  write.c
newlib/libc/sys/aplus/sys/: config.h  dirent.h  ioctl.h  mount.h  resource.h  stat.h  statvfs.h  uio.h
